[gd_scene load_steps=5 format=3 uid="uid://cd6l7ejfgiccl"]

[ext_resource type="Script" path="res://scripts/tower.gd" id="1_gvy6s"]
[ext_resource type="Texture2D" uid="uid://crtqb3qmj44c8" path="res://art/tower_sprite.png" id="2_vi2qy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g10l2"]
size = Vector2(85.25, 82.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_i6s70"]
radius = 427.385

[node name="Tower" type="Area2D"]
script = ExtResource("1_gvy6s")

[node name="TowerRange" type="Polygon2D" parent="."]
visible = false
position = Vector2(-61.2267, -49)
scale = Vector2(0.940115, 0.941175)
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(69.6245, -229.444, 128.172, -223.115, 202.544, -199.379, 262.674, -158.238, 321.222, -80.7011, 352.87, 15.8238, 362.963, 65.8751, 348.123, 113.931, 303.816, 205.709, 243.686, 278.498, 170.897, 314.893, 91.7778, 332.299, 1.5824, 327.552, -82.2835, 294.322, -129.755, 257.927, -178.808, 199.379, -208.874, 125.008, -219.95, 60.1302, -204.126, -20.5709, -172.479, -88.613, -137.667, -148.743, -79.1188, -185.138, -12.659, -221.533)

[node name="TowerSprite" type="Sprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(0.656, 0.656)
texture = ExtResource("2_vi2qy")

[node name="TowerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(1.625, -1.375)
shape = SubResource("RectangleShape2D_g10l2")

[node name="TowerRangeArea" type="Area2D" parent="."]
position = Vector2(-1, 1)
collision_mask = 2

[node name="TowerRangeCollisionShape" type="CollisionShape2D" parent="TowerRangeArea"]
position = Vector2(2, 2)
scale = Vector2(0.631961, 0.631961)
shape = SubResource("CircleShape2D_i6s70")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="TowerRangeArea" to="." method="_on_tower_range_area_area_entered"]
[connection signal="area_exited" from="TowerRangeArea" to="." method="_on_tower_range_area_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
